...
            }
        },
        onDismissRequest = { },
        confirmButton = { },
        dismissButton = {
            TextButton(
                modifier = Modifier.testTag("newReleaseDialogDismiss"),
                onClick = { newReleaseDialog.value = false },
            ) {
                preferencesProvider?.putString(
                    PreferenceKeys.LAST_NEW_RELEASE,
                    appVersionMinorTrimmed(),
                )
...
